--- a/templates/dataview.html
+++ b/templates/dataview.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
-{% block caption %}问卷列表{% endblock %}
+{% block caption %}数据展示页{% endblock %}
 
 {% block header %}
+
 {% endblock %}
 
-{% block title %}问卷列表{% endblock %}
+{% block title %}数据展示页{% endblock %}
 
 {% block contents %}
     TODO
