--- a/templates/questionnaire.html
+++ b/templates/questionnaire.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 
-{% block caption %}示例问卷{% endblock %}
+{% block caption %}{{qname}}{% endblock %}
 
 {% block header %}
 {% endblock %}
 
-{% block title %}示例问卷{% endblock %}
+{% block title %}{{qname}}{% endblock %}
 
 {% block contents %}
 <div class="col-1"></div>
 <div class="col-10">
-    <form class="row" action="/submit/1" method="post">
+    <form class="row" action="/submit/{{qid}}" method="post">
         {{ queries | safe }}
-        <input type="submit" class="btn btn-primary" value="Submit"/>
+        <input type="submit" class="btn btn-primary" value="Submit" />
     </form>
 </div>
 <div class="col-1"></div>
