--- a/templates/success.html
+++ b/templates/success.html
@@ -12,11 +12,44 @@
 -->
 
 {% block page %}
-TODO
+<div class="shadow alert alert-success text-center mx-auto mt-4" style="width: 80%" role="alert">
+    <h1 class="alert-heading font-weight-bold" style="color: rgb(26, 118, 0);">提交成功</h1>
+    <i class="bi bi-check-circle min-vw-100 min-vh-100" style="font-size: 5rem; color: rgb(26, 118, 0);"></i>
+    <hr>
+    <p style="font-size: 1.5rem;">您填写的问卷 {{qname}} {{qid}} 已经成功提交</p>
+    <br>
+    <small class="text-muted">{{message}}</small>
+    <br>
+    <h6 id="lab" class="text-muted"></h6>
+    <p></p>
+</div>
+
+<script>
+    function countdown(){
+      var i = 5;
+      var timer = null;
+      const lab = document.getElementById("lab");
+
+      const change = () => {
+        i--;
+        lab.innerText = "将在 " + i + " 秒后跳转...";
+        if (i <= 0) {
+          window.clearInterval(timer);
+          window.location.href = "{{ jump if jump else '/' }}";
+        }
+      }
+      change();
+      timer = window.setInterval(change, 1000);
+    }
+
+    countdown();
+</script>
+<!--
 <pre>
     qid = {{qid}}
     qname = {{qname}}
     message = {{message}}
     jump = {{jump}}
 </pre>
+-->
 {% endblock %}
