--- a/templates/errorpage.html
+++ b/templates/errorpage.html
@@ -12,10 +12,40 @@
  -->
 
 {% block page %}
-TODO
+<div class="shadow alert alert-danger text-center mx-auto mt-4" style="width: 80%" role="alert">
+    <i class="bi bi-exclamation-triangle min-vw-100 min-vh-100" style="font-size: 5rem; color: rgb(220, 53, 69);"></i>
+    <h1 class="alert-heading font-weight-bold" style="color: rgb(220, 53, 69);">出错啦</h1>
+    <hr>
+    <div class="mb-4" style="font-size: 1.5rem;">{{errmsg}}</div>
+    <div class="text-muted">错误码: {{status_code}}</div>
+    <div class="text-muted mb-2" id="lab"></div>
+</div>
+
+<script>
+    function countdown(){
+        var i = 5;
+        var timer = null;
+        const lab = document.getElementById("lab");
+
+        const change = () => {
+            i--;
+            lab.innerText = "将在 " + i + " 秒后跳转...";
+            if (i <= 0) {
+            window.clearInterval(timer);
+            window.location.href = "{{ jump if jump else '/' }}";
+            }
+        }
+        change();
+        timer = window.setInterval(change, 1000);
+    }
+
+    countdown();
+</script>
+<!--
 <pre>
     message = {{errmsg}}
     code = {{status_code}}
     jump = {{jump}}
 </pre>
+-->
 {% endblock %}
